função para adquirir as informações das funções na empresa
